cplexx.h

  typedef int (CPXPUBLIC CPXL_CALLBACK) (CPXL_CALLBACK_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_PROF) (CPXL_CALLBACK_PROF_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_BRANCH) (CPXL_CALLBACK_BRANCH_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_NODE) (CPXL_CALLBACK_NODE_ARGS);
  typedef int (CPXPUBLIC
               CPXL_CALLBACK_HEURISTIC) (CPXL_CALLBACK_HEURISTIC_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_SOLVE) (CPXL_CALLBACK_SOLVE_ARGS);
  typedef int (CPXPUBLIC CPXL_CALLBACK_CUT) (CPXL_CALLBACK_CUT_ARGS);
  typedef int (CPXPUBLIC
               CPXL_CALLBACK_INCUMBENT) (CPXL_CALLBACK_INCUMBENT_ARGS);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLchgbds (CPXCENVptr env, CPXLPptr lp, CPXINT cnt,
                CPXINT const *indices, char const *lu, double const *bd);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLchgcoef (CPXCENVptr env, CPXLPptr lp, CPXINT i, CPXINT j,
                 double newvalue);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLchgobjoffset (CPXCENVptr env, CPXLPptr lp, double offset);
    CPXLIBAPI
    int CPXPUBLIC CPXLchgobjsen (CPXCENVptr env, CPXLPptr lp, int maxormin);
    CPXLIBAPI int CPXPUBLIC CPXLcloseCPLEX (CPXENVptr * env_p);
    CPXLIBAPI
    CPXLPptr CPXPUBLIC
    CPXLcreateprob (CPXCENVptr env, int *status_p, char const *probname_str);
    CPXLIBAPI int CPXPUBLIC CPXLfreeprob (CPXCENVptr env, CPXLPptr * lp_p);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLgetdblparam (CPXCENVptr env, int whichparam, double *value_p);
    CPXLIBAPI
    CPXCCHARptr CPXPUBLIC
    CPXLgeterrorstring (CPXCENVptr env, int errcode, char *buffer_str);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLgetintparam (CPXCENVptr env, int whichparam, CPXINT * value_p);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLgetlongparam (CPXCENVptr env, int whichparam, CPXLONG * value_p);
    CPXLIBAPI CPXINT CPXPUBLIC CPXLgetnumcols (CPXCENVptr env, CPXCLPptr lp);
    CPXLIBAPI CPXINT CPXPUBLIC CPXLgetnumrows (CPXCENVptr env, CPXCLPptr lp);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLgetstrparam (CPXCENVptr env, int whichparam, char *value_str);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLnewcols (CPXCENVptr env, CPXLPptr lp, CPXINT ccnt,
                 double const *obj, double const *lb, double const *ub,
                 char const *xctype, char const *const *colname);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLnewrows (CPXCENVptr env, CPXLPptr lp, CPXINT rcnt,
                 double const *rhs, char const *sense,
                 double const *rngval, char const *const *rowname);
    CPXLIBAPI CPXENVptr CPXPUBLIC CPXLopenCPLEX (int *status_p);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLsetdblparam (CPXENVptr env, int whichparam, double newvalue);
    CPXLIBAPI int CPXPUBLIC CPXLsetdefaults (CPXENVptr env);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLsetintparam (CPXENVptr env, int whichparam, CPXINT newvalue);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLsetlongparam (CPXENVptr env, int whichparam, CPXLONG newvalue);
    CPXLIBAPI
    int CPXPUBLIC
    CPXLsetstrparam (CPXENVptr env, int whichparam, char const *newvalue_str);
    CPXLIBAPI CPXCCHARptr CPXPUBLIC CPXLversion (CPXCENVptr env);
    CPXLIBAPI
    int CPXPUBLIC CPXLversionnumber (CPXCENVptr env, int *version_p);